# rowboat-simulation

./: README.md  pyproject.toml  testcases.md
rowboat/: __init__.py  exceptions.py  models.py
tests/: __init__.py  test_rowboat.py
