[project]
name = "rowboat-simulation"
version = "1.0.1l"
description = "API simulation for a rowboat."
readme = "README.md"
authors = [
    { name = "Мухаммет Суханкулиев", email = "muhammet.jkl2.suhanguylev@gmail.com" },
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rowboat"]